Fixing time line overflow

--- a/src/components/AppointmentProfile/_AppointmentProfile.scss
+++ b/src/components/AppointmentProfile/_AppointmentProfile.scss
@@ -14,3 +14,10 @@
   border-style: solid;
   padding: 5px;
 }
+.timeline {
+  height: 76%;
+  width: 100%;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  padding-top: 3px;
+}
